Fri Sep 19 10:55:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add checks to ensure that weighting
	  parameters are in the allowed ranges.

Thu Sep 18 00:55:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Allow getting a document based on
	  the xapian docid, instead of the external unique ID used by
	  xappy.

Tue Sep 09 17:15:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_associations.py: Extend the test a bit
	  further (it still passes!).

Tue Sep 09 17:01:19 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Add optional "weight" member to Field:
	  defaults to 1.0, not currently used anywhere other than in the
	  relevant_data() calculation for associated fields.
	* xappy/fieldactions.py: Store the weight values specified.  Also,
	  modify STORE_CONTENT to simply increase the stored weight if a
	  field is repeated multiple times, rather than storing it multiple
	  times.  Change in database format for existing databases which
	  use field assocs (but this feature hasn't been in a release yet,
	  anyway).
	* xappy/searchconnection.py: Use weights stored in field actions
	  to make relevant_data() return fields in a sorted (descending)
	  order of relevance, and to return the data within each field in
	  descending order of weight.  Also, fix a bug with query_range()
	  when both endpoints were None - previously, this returned an
	  "all documents" query - now it returns an "all documents which
	  have an entry in the slot" query, which is more logically
	  consistent.
	* xappy/unittests/field_associations.py: Test repeated, and
	  weighted, field associations.

Thu Sep 04 14:11:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Basic documentation on field associations.

Thu Sep 04 13:53:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
