@@ -1,3 +1,9 @@
+Thu Sep 25 09:07:08 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py: Fix add_subfacet() to not repeatedly
+	  add a parent which is already there.  Should have no functional
+	  effect, but should keep the size of the configuration down.
+
 Fri Sep 19 10:55:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add checks to ensure that weighting
